deploy/kubernetes/grpc-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserversvc
  labels:
    app: grpcserversvc
spec:
  # at least 2 for production
  replicas: 1
  selector:
    matchLabels:
      app: grpcserversvc
  template:
    metadata:
      labels:
        app: grpcserversvc
    spec:
      containers:
        - name: grpcserversvc
          image: rsachdeva/illuminatingdeposits.grpc.server:v1.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserversvc
  labels:
    app: grpcserversvc
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 50052
      protocol: TCP
      # for container
      targetPort: 50052
  selector:
    app: grpcserversvc
---
#apiVersion: networking.k8s.io/v1beta1
#  kind: Ingress
#  metadata:
#    annotations:
#      kubernetes.io/ingress.class: nginx
#    name: example
#    namespace: foo
#  spec:
#    rules:
#      - host: www.example.com
#        http:
#          paths:
#            - backend:
#                serviceName: exampleService
#                servicePort: 80
#              path: /
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpcserversvc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  tls:
    - hosts:
       - grpcserversvc.127.0.0.1.nip.io
      secretName: illuminatingdeposits-grpc-secret-tls
  rules:
    - host: grpcserversvc.127.0.0.1.nip.io
      http:
        paths:
          - backend:
               serviceName: grpcserversvc
               #  for service port exposed; not for container directly
               servicePort: grpc
