deploy/kubernetes/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:2.23
          ports:
            - containerPort: 9411
          livenessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  type: ClusterIP
  ports:
    - port: 9411
      protocol: TCP
#      for container
      targetPort: 9411
  selector:
    app: zipkin
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zipkin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: zipkin.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: zipkin
              #  for service port exposed; not for container directly
              servicePort: 9411
